--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
+    "@google/genai": "^1.19.0",
     "@types/csv-parse": "^1.1.12",
     "csv-parse": "^6.1.0",
     "csv-parser": "^3.2.0",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "json2csv": "^6.0.0-alpha.2",
     "multer": "^2.0.2",
-    "node": "^24.8.0"
+    "node": "^24.8.0",
+    "openai": "^5.20.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
